<resources>
    <string name="app_name">Android app</string>
    <string name="nombre">Nombre</string>
    <string name="teclea">Teclea tu nombre</string>
    <string name="señora">Sra.</string>
    <string name="señor">Sr.</string>
    <string name="despedida">Despedida</string>
    <string name="hola">HOLA</string>
    <string name="adios">Adios</string>
    <string name="chao">Hasta Luego</string>
    <string name="Error1">ERROR. Debes elegir un tratamiento</string>
    <string name="Error2">ERROR. Debes elegir un tratamiento o poner tu nombre.</string>
    <string name="mensaje" translatable="false"></string>
</resources>