<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ej2Activity">

    <TextView
        android:id="@+id/tvTecleaN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:text="@string/teclea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="212dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nombre"
        app:layout_constraintBottom_toBottomOf="@id/tvTecleaN"
        app:layout_constraintStart_toEndOf="@id/tvTecleaN"
        app:layout_constraintTop_toTopOf="@id/tvTecleaN" />

    <RadioGroup
        android:id="@+id/rgSraSr"
        android:layout_width="135dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/tvTecleaN"
        app:layout_constraintTop_toBottomOf="@id/tvTecleaN">

        <RadioButton
            android:id="@+id/rbSeñora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/señora"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/rbSeñor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/señor" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:text="@string/despedida"
        app:layout_constraintBottom_toBottomOf="@+id/rgSraSr"
        app:layout_constraintEnd_toEndOf="@+id/editTextNombre"
        app:layout_constraintTop_toTopOf="@+id/rgSraSr" />

    <Button
        android:id="@+id/bHola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:text="@string/hola"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgDespedida"
        android:layout_width="196dp"
        android:layout_height="54dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre">

        <RadioButton
            android:id="@+id/rbAdios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adios"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/rbHastaLuego"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chao"
            android:layout_marginLeft="5dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tvResultdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/mensaje"
        app:layout_constraintEnd_toEndOf="@+id/bHola"
        app:layout_constraintStart_toStartOf="@+id/bHola"
        app:layout_constraintTop_toBottomOf="@+id/bHola" />
</androidx.constraintlayout.widget.ConstraintLayout>